# gpu-mini-projects

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_container.sh  podman_enter.sh  setup.sh
common/include/: hip_array.h
projects/BM3D/: CMakeLists.txt
projects/BM3D/src/: bm3d.cc  main.cc
projects/ImageFilter/: CMakeLists.txt  image_filter.cc
projects/VectorMultiply/: CMakeLists.txt  vector_multiply.cc  vector_multiply.h
scripts/: profiler.txt
